@@ -547,6 +547,8 @@ class MARBLE_EXPORT MarbleWidget : public QWidget
     int   toLogScale(int);
     int   fromLogScale(int);
 
+    void  drawAtmosphere();
+
     void  setActiveRegion();
 
  private:
